# backtest-cpp-py

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  Justfile  README.md  app.py  backtest.py  docker-compose.yml  flake.nix  pyproject.toml  visualize.py
core/include/: bar.hpp  broker.hpp  data_handler.hpp  events.hpp  export.hpp  performance.hpp  portfolio.hpp  strategy.hpp
core/src/: main.cpp
scripts/: download_data.py
strategies/: __init__.py  broker.py  data_handler.py  events.py  performance.py  portfolio.py  runner.py  strategy.py
