[project]
name = "backtest"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "matplotlib>=3.10.8",
    "numpy>=2.2.6",
    "pandas>=2.3.3",
    "plotly>=6.6.0",
    "pyyaml>=6.0.3",
    "streamlit>=1.56.0",
    "yfinance>=1.2.1",
]

[tool.uv.extra-build-dependencies]
multitasking = ["setuptools"]

[tool.setuptools]
packages = []
